# neurips26-init-submission

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
configs/: pretrain.yaml  pretrain_no_hed.yaml
neural_vocabulary/baselines/: __init__.py  bendr_adapter.py  biot_adapter.py  cbramod_adapter.py  labram_adapter.py  reve_adapter.py
neural_vocabulary/configs/: __init__.py
neural_vocabulary/data/: __init__.py  base_dataset.py  blink_detector.py  collate.py  consolidated_dataset.py  erp_core.py  erpcore_event_classifier.py  erpcore_label_rules.py  erpcore_paradigm_dataset.py  event_epocher.py  gpu_cached_dataset.py  hbn_eeg.py  hed_assembly.py  hed_vectorizer.py  masking.py  packed_collator.py  packed_ssl_dataset.py  physionet_mi.py  preprocessed_dataset.py  ssd_dataset.py  things_eeg.py  transforms.py
neural_vocabulary/evaluation/: __init__.py  baselines.py  collapse_detector.py  linear_probe.py  metrics.py  splits.py
neural_vocabulary/losses/: __init__.py  hed_loss.py  ssl_dual_loss.py
neural_vocabulary/models/: __init__.py  bert_ssl.py  channel_harmonization.py  cnn_1d.py  cnn_2d.py  decoder.py  joint_model.py  multiscale_encoder.py  positional_encoding.py  transformer.py  vit_tf.py
neural_vocabulary/scripts/: baseline_bendr.py  baseline_biot.py  baseline_labram.py  e2_literature_probes.py  erpcore_extract_embeddings.py  erpcore_preprocess.py  eval_event_recovery.py  eval_n170_loso.py  eval_within_hbn.py  eval_within_task.py  extract_tf_features.py  preprocess_hbn.py  pretrain.py
neural_vocabulary/training/: __init__.py  device_manager.py  trainer.py
